[tool.poetry]
name = "spkcspider-messaging"
description = "Safe online messaging"
version = "0.1a"
authors = ["Alexander Kaftan"]
readme = "README.md"
repository = "https://github.com/spkcspider/spkcspider-messaging"

[tool.poetry.dependencies]
python = ">=3.6"
rdflib = '*'
html5lib = '*'
cryptography = "*"


[tool.poetry.dev-dependencies]
spkcspider = ">=0.21"
spkcspider-domainauth = ">=0.4"
django-extensions = "*"
twisted = "*"
pyOpenSSL = "*"
service_identity = "*"


[tool.poetry.extras]
django = ["spkcspider>=0.21"]
test = ["spkcspider[test]>=0.21", "spkcspider-domainauth>=0.4"]
email = ["twisted", "service_identity", "pyOpenSSL"]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.4.0
skipsdist=true
envlist = py{35,36,37}-django{22,master}

[testenv]
commands = python -Wd ./manage.py test tests


setenv =
    PYTHONDONTWRITEBYTECODE=1

deps =
  spkcspider
  django-webtest
  WSGIProxy2
  django22: Django>=2.2a1,<=2.2.99
  djangomaster: https://github.com/django/django/archive/master.zip

"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
