[tool.poetry]
name = "spkcspider-messaging"
description = "Safe online messaging"
version = "0.1a"
authors = ["Alexander Kaftan"]
readme = "README.md"
repository = "https://github.com/spkcspider/spkcspider-messaging"

[tool.poetry.dependencies]
python = ">=3.6"
rdflib = '*'
html5lib = '*'
cryptography = "*"
spkcspider = {version = ">=0.24", optional=true}
spkcspider-domainauth = {version = ">=0.4", optional=true}

twisted = {version = "*", optional=true}
service_identity = {version = "*", optional=true}
pyOpenSSL = {version = "*", optional=true}


[tool.poetry.dev-dependencies]
django-extensions = "*"
twisted = "*"
pyOpenSSL = "*"
service_identity = "*"
spkcspider = {version = ">=0.26"}
spkcspider-domainauth = {version = ">=0.4"}


[tool.poetry.extras]
django = ["spkcspider", "spkcspider-domainauth"]
test = ["spkcspider[test]", "spkcspider-domainauth"]
email = ["twisted", "service_identity", "pyOpenSSL"]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.4.0
skipsdist=true
envlist = py{35,36,37}-django{30,master}

[testenv]
commands = python -Wd ./manage.py test tests


setenv =
    PYTHONDONTWRITEBYTECODE=1

deps =
  django30: Django>=3.0,<3.1
  djangomaster: https://github.com/django/django/archive/master.zip

"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
